# shopify_toolkit

./: .gitignore  pyproject.toml  requirements.txt  shopify_add_product.py  shopify_helper.py  shopify_list_products.py  shopify_toolkit.py  tool_config_key_type.py  tool_configuration.py
actions/: shopify_add_product.py  shopify_list_products.py  tool_configuration.py
tests/: test_shopify_add.py
